--- a/website/docs/query-client/cancelQueries.mdx
+++ b/website/docs/query-client/cancelQueries.mdx
@@ -102,6 +102,7 @@ guide for more information.
      **/
     qraft.entities.getEntities.cancelQueries(
       {
+        infinite: false,
         parameters: {
           header: {
             'x-monite-version': '2023-09-01',
@@ -148,6 +149,7 @@ guide for more information.
      **/
     qraft.entities.getEntities.cancelQueries(
       {
+        infinite: false,
         parameters, // * optional, or specific parameters, alternatively, you can use `queryKey`
         predicate: (query) => {
           // `queryKey`⬇︎ is fully typed to `qraft.entities.getEntities` operation parameters
