--- a/website/docs/query-client/invalidateQueries.mdx
+++ b/website/docs/query-client/invalidateQueries.mdx
@@ -72,6 +72,7 @@ guide for more information.
      **/
     qraft.entities.getEntities.invalidateQueries(
       {
+        infinite: false,
         parameters: {
           header: {
             'x-monite-version': '2023-09-01',
@@ -118,6 +119,7 @@ guide for more information.
      **/
     qraft.entities.getEntities.invalidateQueries(
       {
+        infinite: false,
         parameters, // * optional, or specific parameters, alternatively, you can use `queryKey`
         predicate: (query) => {
           // `queryKey`⬇︎ is fully typed to `qraft.entities.getEntities` operation parameters
