--- a/website/docs/query-client/removeQueries.mdx
+++ b/website/docs/query-client/removeQueries.mdx
@@ -51,6 +51,7 @@ qraft.<service>.<operation>.removeQueries(
      **/
     qraft.entities.getEntities.removeQueries(
       {
+        infinite: false,
         parameters: {
           header: {
             'x-monite-version': '2023-09-01',
@@ -97,6 +98,7 @@ qraft.<service>.<operation>.removeQueries(
      **/
     qraft.entities.getEntities.removeQueries(
       {
+        infinite: false,
         parameters, // * optional, or specific parameters, alternatively, you can use `queryKey`
         predicate: (query) => {
           // `queryKey`⬇︎ is fully typed to `qraft.entities.getEntities` operation parameters
