docs: update infinite docs

--- a/website/docs/query-client/isFetching.mdx
+++ b/website/docs/query-client/isFetching.mdx
@@ -37,7 +37,7 @@ guide for more information.
        - **Required** [_QueryClient 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient) to be used
   </TabItem>
   <TabItem value="without-filters" label={<span style={{verticalAlign: "middle"}}>Without <code>filters</code></span>}>
-    Check _all_ queries for the specified endpoint.
+    Check _all_ normal and _Infinite_ queries for the specified endpoint.
 
     ```ts
     qraft.<service>.<operation>.isFetching(
