--- a/website/docs/hooks/useIsFetching.mdx
+++ b/website/docs/hooks/useIsFetching.mdx
@@ -20,7 +20,7 @@ const queriesNumber = qraft.<service>.<operation>.useIsFetching(
 
 1. `filters?: QueryFiltersByParameters | QueryFiltersByQueryKey`
    - **Optional**, represents the [_Query Filters 🌴_](https://tanstack.com/query/latest/docs/framework/react/guides/filters#query-filters)
-     to be used, strictly-typed ✨
+     to be used. If not provided, _all_ normal and _Infinite_ queries will be used to filter.
    - `filters.parameters: { path, query, header }` will be used for filtering queries by parameters
    - `filters.queryKey: QueryKey` will be used for filtering queries by _QueryKey_ instead of parameters
      - `filters.queryKey` and `filters.parameters` are mutually exclusive
