--- a/website/docs/query-client/cancelQueries.mdx
+++ b/website/docs/query-client/cancelQueries.mdx
@@ -66,7 +66,7 @@ guide for more information.
        - **Required** [_QueryClient 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient) to be used
   </TabItem>
   <TabItem value="without-filters" label={<span style={{verticalAlign: "middle"}}>No <code style={{textDecoration: "line-through"}}>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
-    Cancels _all_ queries for the specified endpoint.
+    Cancels _all_ normal and _Infinite_ queries for the specified endpoint.
 
     ```ts
     qraft.<service>.<operation>.cancelQueries(
