--- a/website/docs/query-client/invalidateQueries.mdx
+++ b/website/docs/query-client/invalidateQueries.mdx
@@ -37,7 +37,7 @@ guide for more information.
        - **Required** [_QueryClient 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient) to be used
   </TabItem>
   <TabItem value="without-filters" label={<span style={{verticalAlign: "middle"}}>No <code style={{textDecoration: 'line-through'}}>filters</code></span>}>
-    Invalidates _all_ queries for the specified endpoint.
+    Invalidates _all_ normal and _Infinite_ queries for the specified endpoint.
 
     ```ts
     qraft.<service>.<operation>.invalidateQueries(
