docs: add `getQueriesData` documentation placeholder 🚧

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -181,7 +181,7 @@ hooks with strictly-typed parameters.
 - [x] [`prefetchQuery(...)`](/query-client/prefetchQuery.mdx)
 - [x] [`prefetchInfiniteQuery(...)`](/query-client/prefetchInfiniteQuery.mdx)
 - [x] [`getQueryData(...)`](/query-client/getQueryData.mdx)
-- [ ] `getQueriesData(...)` 🔜
+- [x] [`getQueriesData(...)`](/query-client/getQueriesData.mdx)
 - [x] [`setQueryData(...)`](/query-client/setQueryData.mdx)
 - [ ] `getQueryState(...)` 🔜
 - [x] [`setQueriesData(...)`](/query-client/setQueriesData.mdx)
