docs: add `getQueryState` and `getInfiniteQueryState` methods documentation placeholder 🚧

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -183,7 +183,7 @@ hooks with strictly-typed parameters.
 - [x] [`getQueryData(...)`](/query-client/getQueryData.mdx)
 - [x] [`getQueriesData(...)`](/query-client/getQueriesData.mdx)
 - [x] [`setQueryData(...)`](/query-client/setQueryData.mdx)
-- [ ] `getQueryState(...)` 🔜
+- [x] [`getQueryState(...)`](/query-client/getQueryState.mdx)
 - [x] [`setQueriesData(...)`](/query-client/setQueriesData.mdx)
 - [x] [`invalidateQueries(...)`](/query-client/invalidateQueries.mdx)
 - [x] [`refetchQueries(...)`](/query-client/refetchQueries.mdx)
@@ -199,4 +199,5 @@ hooks with strictly-typed parameters.
 - [x] [`setInfiniteQueryData(...)`](/query-client/setInfiniteQueryData.mdx)
 - [x] [`getInfiniteQueryKey(...)`](/query-client/getInfiniteQueryKey.mdx)
 - [x] [`getInfiniteQueryData(...)`](/query-client/getInfiniteQueryData.mdx)
+- [x] [`getInfiniteQueryState(...)`](/query-client/getInfiniteQueryState.mdx)
 - [x] [`getMutationKey(...)`](/query-client/getMutationKey.mdx)
