--- a/website/docs/getting-started/installation.mdx
+++ b/website/docs/getting-started/installation.mdx
@@ -4,28 +4,12 @@ sidebar_position: 1
 
 # Installation
 
-Before you start using OpenAPI Qraft, you need to install the Qraft binding for the React
-and the CLI tool to generate the API client. You will also need to install
-[`openapi-typescript`](https://www.npmjs.com/package/openapi-typescript) to generate the types from the OpenAPI Document.
+Before you start using OpenAPI Qraft, you need to install the CLI tool to generate the API client.
+You also need to install the Qraft Client React package to use the generated API client.
 
 ```bash npm2yarn
-npm install @openapi-qraft/react
 npm install -D @openapi-qraft/cli
-npm install -D openapi-typescript
-```
-
-## Requirements
-
-OpenAPI Qraft is compatible with React v18+ and works with ReactDOM and React Native.
-Browser support is the sa as requirements as [TanStack Query](https://tanstack.com/query/latest/docs/framework/react/installation#requirements):
-
-```text
-Chrome >= 91
-Firefox >= 90
-Edge >= 91
-Safari >= 15
-iOS >= 15
-Opera >= 77
+npm install @openapi-qraft/react
 ```
 
 :::info Peer Dependency
@@ -38,3 +22,17 @@ npm install @tanstack/react-query
 ```
 
 :::
+
+## Requirements 🌴
+
+OpenAPI Qraft is compatible with React v18+ and works with ReactDOM and React Native.
+Browser support is consistent with TanStack Query:
+
+```text
+Chrome >= 91
+Firefox >= 90
+Edge >= 91
+Safari >= 15
+iOS >= 15
+Opera >= 77
+```
