feature: add `--export-openapi-types` option

--- a/website/docs/codegen/cli.mdx
+++ b/website/docs/codegen/cli.mdx
@@ -47,6 +47,7 @@ package for more details.
   - Examples:
     - `--filter-services '/user/**,/post/**'` - include only API endpoints that start with `/user/` or `/post/`
     - `--filter-services '**,!/internal/**'` - include _all_ API endpoints _except_ those that start with `/internal/`
+- **`--export-openapi-types [bool]`:** Export the OpenAPI schema types from the generated `./index.ts` file.
 
 #### Edge-case Options
 
