chore(docs): minor docs update

--- a/website/docs/hooks/useMutation.mdx
+++ b/website/docs/hooks/useMutation.mdx
@@ -1,12 +1,12 @@
 ---
 sidebar_position: 4
-sidebar_label: 'useMutation'
+sidebar_label: useMutation()
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# useMutation(...)
+# useMutation()
 
 The Hook enables you to perform asynchronous data mutation operations, such as _POST_, _PUT_, _PATCH_, or _DELETE_ requests.
 It not only handles the loading state, but also provides an APIs for optimistic updates and error handling.
