--- a/website/docs/hooks/useSuspenseQueries.mdx
+++ b/website/docs/hooks/useSuspenseQueries.mdx
@@ -1,6 +1,5 @@
 ---
-id: useSuspenseQueries
-sidebar_label: useSuspenseQueries
+sidebar_label: useSuspenseQueries()
 ---
 
 # useSuspenseQueries(...)
