--- a/website/docs/query-client/getMutationKey.mdx
+++ b/website/docs/query-client/getMutationKey.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_label: getMutationKey
+sidebar_label: getMutationKey()
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
