--- a/website/docs/codegen/create-api-client-function.mdx
+++ b/website/docs/codegen/create-api-client-function.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 2
-sidebar_label: 'createAPIClient(...)'
+sidebar_label: createAPIClient()
 ---
 
 import Tabs from '@theme/Tabs';
