--- a/website/docs/hooks/useInfiniteQuery.mdx
+++ b/website/docs/hooks/useInfiniteQuery.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 5
-sidebar_label: useInfiniteQuery
+sidebar_label: useInfiniteQuery()
 ---
 
 import Tabs from '@theme/Tabs';
