--- a/website/docs/query-client/refetchQueries.mdx
+++ b/website/docs/query-client/refetchQueries.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_label: refetchQueries
+sidebar_label: refetchQueries()
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
