docs(website): fix headings formatting

--- a/website/docs/getting-started/quick-start.mdx
+++ b/website/docs/getting-started/quick-start.mdx
@@ -11,7 +11,7 @@ To get started with OpenAPI Qraft, you first need to generate types from your Op
 and also generate services that will use these types to interact with your API.
 Assumed that you already [installed](installation.mdx) Qraft packages.
 
-### 1. **Generate OpenAPI Types & Services**
+### 1. Generate OpenAPI Types & Services
 
 To generate services from OpenAPI Document, you must first [install](/getting-started/installation.mdx)
 the `@openapi-qraft/cli` package. Then, you can use the `openapi-qraft` command to generate services and types.
@@ -68,7 +68,7 @@ src/
 
 :::
 
-### 2. **Use the generated services** in your React application
+### 2. Use the generated services in your React application
 
 Here are examples of how to use the generated services in your React application with
 `useQuery`, `useMutation`, and `useInfiniteQuery` hooks from [TanStack Query](https://tanstack.com/query/latest).
