chore(docs): fix spelling

--- a/website/docs/getting-started/quick-start.mdx
+++ b/website/docs/getting-started/quick-start.mdx
@@ -33,7 +33,7 @@ the `@openapi-qraft/cli` package. Then, you can use the `openapi-qraft` command 
       "scripts": {
         "generate-client": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/master/src/main/resources/openapi.yaml --output-dir src/api"
       },
-      "devDepencencies": {
+      "devDependencies": {
         "@openapi-qraft/cli": "latest"
       }
     }
