--- a/website/docs/codegen/cli.mdx
+++ b/website/docs/codegen/cli.mdx
@@ -49,6 +49,29 @@ npx openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript http
   - Examples:
     - `--filter-services '/user/**,/post/**'` - include only API endpoints that start with `/user/` or `/post/`
     - `--filter-services '**,!/internal/**'` - include _all_ API endpoints _except_ those that start with `/internal/`
+- **`--operation-predefined-parameters <patterns...> `:** Predefined parameters for services. The specified services parameters will be optional. _(optional)_
+
+  This most wanted option 💎 allows you to **set default parameters** across multiple endpoints. However, if an endpoint doesn't contain a parameter specified in this option, an error will be displayed. For example:
+
+  ```text
+  ⚠ Missing predefined parameter 'header' 'x-monite-version' in 'post /files' in '/**'
+  ```
+
+  To resolve such errors, you can exclude specific endpoints from the predefined parameters using the negation syntax in the glob pattern, like:
+
+  ```
+  --operation-predefined-parameters '/**,!/files:header.x-monite-version'
+  ```
+
+  - Examples:
+    - `--operation-predefined-parameters '/**:header.x-monite-version'` - set `header.x-monite-version`
+      as optional parameters for all services.
+    - `--operation-predefined-parameters '/**,!/auth/token:header.x-entity-id'` - set `header.x-entity-id` as optional parameters for all services except `/auth/token`.
+    - `--operation-predefined-parameters '/**:header.x-monite-version,query.x-api-key' '/user/**,/post/**:header.x-monite-entity-id'` -
+      set `header.x-monite-version` and `query.x-api-key` as optional parameters for all services, and `header.x-monite-entity-id` for the `/user/**` and `/post/**` services.
+  > **Note:** In future versions of the library, this feature will be expanded. Not only will it make parameters optional,
+  > but it will also offer typed suggestions for these predefined parameters when creating a client. This enhancement will
+  > further improve type safety and developer experience.
 - **`--service-name-base <endpoint[<index>] | tags>`:** Use OpenAPI Operation `endpoint[<index>]` path part (e.g.: `/0/1/2`) or `tags` as the base name of the service. _(optional, default: `endpoint[0]`)_.
   - Examples:
     - `--service-name-base endpoint[0]` generates `services/FooService.ts` for the endpoint `/foo/bar/baz`
