feat: update `openapi-typescript` up to `^7.3.0`

--- a/website/docs/codegen/cli.mdx
+++ b/website/docs/codegen/cli.mdx
@@ -121,6 +121,8 @@ It is possible to use multiple plugins at the same time. For example, `--plugin 
 
 - **`--openapi-types-file-name <path>`**: OpenAPI Schema types file name, e.g., `schema.d.ts` (default: `schema.ts`).
 - **`--enum`**: Export true TypeScript enums instead of unions.
+- **`--enum-values`**: Export enum values as arrays.
+- **`--dedupe-enums`**: Dedupe enum types when `--enum` is set.
 - **`-t, --export-type`**: Export top-level `type` instead of `interface`.
 - **`--immutable`**: Generate readonly types.
 - **`--additional-properties`**: Treat schema objects as if `additionalProperties: true` is set.
