docs(openapi-typescript-plugin): improve `--explicit-component-exports` instructions

--- a/website/docs/codegen/cli.mdx
+++ b/website/docs/codegen/cli.mdx
@@ -161,6 +161,7 @@ It is possible to use multiple plugins at the same time. For example, `--plugin 
 - **`--alphabetize`**: Sort object keys alphabetically.
 - **`--exclude-deprecated`**: Exclude deprecated types.
 - **`--no-blob-from-binary`**: If this option is enabled, `format: binary` fields will not be converted to `Blob` types, preserving the native type. Could be used with `--plugin openapi-typescript` option.
+- **`--explicit-component-exports`**: Enabling this option will export API components as separate type aliases, alongside `components` interface.
 
 ## In-project Setup
 
