docs(website): update quick-start and overview pages

--- a/website/docs/getting-started/quick-start.mdx
+++ b/website/docs/getting-started/quick-start.mdx
@@ -84,8 +84,8 @@ Here are examples of how to use the generated services in your React application
 
     const queryClient = new QueryClient();
 
-    // Call `createAPIClient(...)` to create the API client whenever you need
-    // It's just a shortcut to TanStack Query Hooks🪶
+    // Use `createAPIClient(...)` to initialize the API client as needed.
+    // It's a lightweight 🪶 shortcut for working with TanStack Query 🌴
     const api = createAPIClient({
       requestFn,
       queryClient,
