docs(website): add SSR and server notes

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -22,6 +22,9 @@ hooks with strictly-typed parameters.
   for handling server state, caching, and data synchronization.
 - **Dynamic Proxy-Based Hooks:** Automatically generate React Query hooks for your API endpoints without manual
   boilerplate.
+- **SSR Support:** OpenAPI Qraft fully supports Server-Side Rendering (SSR)
+  [at the same level](https://tanstack.com/query/latest/docs/framework/react/guides/advanced-ssr)
+  as TanStack Query, including support for Next.js `/app` directory.
 
 ## Fast Run
 
