--- a/website/docs/hooks/useQuery.mdx
+++ b/website/docs/hooks/useQuery.mdx
@@ -28,7 +28,8 @@ const query = api.<service>.<operation>.useQuery(
 ### Arguments
 
 1. `parameters: { path, query, header } | QueryKey | void`
-   - OpenAPI request parameters for the query, strictly-typed ✨
+   - **Required only if OpenAPI specification defines required parameters**
+   - If the operation has no required parameters according to OpenAPI, you can omit this argument
    - `parameters` will be used to generate the `QueryKey`
    - Instead of an object with `{ path, query, header }`, you can pass a `QueryKey` as an array
      which is also strictly-typed
@@ -36,7 +37,6 @@ const query = api.<service>.<operation>.useQuery(
 2. `queryOptions?: UseQueryOptions`
    - **Optional**, represents the options of the [_useQuery(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQuery) Hook
      - `queryOptions.queryFn` could be provided to override the default `queryFn` used by Qraft
-     - ~~`queryOptions.queryKey`~~ is not allowed, as it will be generated from `parameters`
 
 ### Example
 
