--- a/website/docs/core/mutation-operation.mdx
+++ b/website/docs/core/mutation-operation.mdx
@@ -30,7 +30,7 @@ const result = qraft.<service>.<operation>(
    - `baseUrl` - An optional base URL for the `requestFn`
    - `signal` - An optional `AbortSignal` to cancel the request
    - `meta` - An optional object that will be passed to the `requestFn`
-2. `requestFn: RequestFn`
+2. `requestFn?: RequestFn`
    - **Optional**, a function that will be used to execute the request
 
 ### Returns
